cambios config